# psic_n_mono

./: .gitignore  anarcoped.py
psi_n_mono/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts.timestamp-1661013976140.mjs
psi_n_mono/src/: App.vue  main.ts  psi_model.ts
psi_n_mono/src/components/: card.vue
psi_n_mono_back/: pyproject.toml
psi_n_mono_back/psi_n_mono_back/: __init__.py  anarcoped.py  app.py
psi_n_mono_back/psi_n_mono_back/static/: index.05c05943.js  index.70738364.css  index.816a7ad9.js  index.90788a20.js  index.a7cc7944.css  index.html
psi_n_mono_back/tests/: test_psi_n_mono_back.py
