[tool.poetry]
name = "psi_n_mono_back"
version = "1.0.7"
description = ""
authors = ["cesardddp <cesardddp@hotmail.com>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
bs4 = "^0.0.1"
requests = "^2.28.1"
Flask-Caching = "^2.0.1"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "^22.6.0"
ipdb = "^0.13.9"
Flask-Cors = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
